# UV-Master

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md
.github/workflows/: cmake-single-platform.yml
3rd/: CMakeLists.txt  How_to_install.md  install.sh
3rd/cjson/: CMakeLists.txt
3rd/clog/: CMakeLists.txt  log.c
3rd/easylogger/: CMakeLists.txt
3rd/easylogger/plugins/file/: elog_file_cfg.h
3rd/s2j/: CMakeLists.txt  s2j.c  s2j.h
cal/: CMakeLists.txt  mjsonrpc.c  rpc-cjson.c  rpc-cjson.h  rpc-fun.c  rpc-fun.h  rpc_cjson.c  rpc_cjson.h  tcp-server.c  tcp-server.h  tcp_server.c  tcp_server.h  uvm-cal.c  uvm-cal.h  uvm_cal.c  uvm_cal.h
cfg/: CMakeLists.txt  cfg_dev_ctl.c  cfg_dev_ctl.h  cfg_others.c  cfg_others.h  cfg_propeller.c  cfg_propeller.h  cfg_rocket_ratio.c  cfg_rocket_ratio.h  uvm-cfg-def.h  uvm-cfg.c  uvm-cfg.h  uvm_cfg.c  uvm_cfg.h  uvm_cfg_intf.c  uvm_cfg_intf.h
cfg/cfg-file-tpl/: config.json
cfg/params/: dev_ctl.c  dev_ctl.h  others.c  others.h  propeller.c  propeller.h  rocket_ratio.c  rocket_ratio.h
config/: config.json
drivers/: CMakeLists.txt  jy901.c  jy901.h  jy901_reg.h  ms5837.c  ms5837.h  pca9685.c  pca9685.h
exlibs/: CMakeLists.txt
exlibs/struct2json/: s2jdef.h
hal/: CMakeLists.txt  driver_ms5837_basic.h  driver_pca9685.c  driver_pca9685_basic.h  interface_ms5837.c  interface_pca9685.c  ms5837.c  ms5837.h  pca9685.c  pca9685.h
hal/intf/: driver_ms5837_interface.h  driver_pca9685_interface.c  driver_pca9685_interface.h
hal/utils/: delay.c  delay.h  gpio.c  gpio.h  iic.c  iic.h  pwm.c  pwm.h  spi.c  spi.h  sysfs.c  uart.c
log-sys/: CMakeLists.txt  elog.c  elog.h  elog_async.c  elog_buf.c  elog_port.c  elog_utils.c
protocols/: CMakeLists.txt  cJSON.c  jsonrpc-c.c  jsonrpc-c.h  rpc_cjson.c  rpc_cjson.h
src/: CMakeLists.txt  main.c
src/cfg/: CMakeLists.txt
src/comm/: CMakeLists.txt
src/ctrl/: CMakeLists.txt  mode_manual.c  mode_manual.h
src/dev/: CMakeLists.txt  motor.c  motor.h
src/log/: CMakeLists.txt  log.h
src/rpc/: CMakeLists.txt  ctrl.c  ctrl.h
user/: CMakeLists.txt  appmain.c  data_define.h  main.c  main_app.c  rovmain.c  uvm.c
user/config/: config.c  config.h
user/config/parameters/: dev_ctl.c  dev_ctl.h  others.c  others.h  pid_ctl.c  pid_ctl.h  propeller.c  propeller.h  rocket_ratio.c  rocket_ratio.h  utils.c  utils.h
user/control/: control.c  control.h  pid.c  pid.h
user/control/ctrlPart/: depth.c  depth_ctl.h  horizon.c  horizon.h  manual_ctl.c  manual_ctl.h  rotate.c  rotate_ctl.h
user/ctrl/: CMakeLists.txt  mode_manual.c  mode_manual.h
user/data-type/: control.h  device.h  pid.h  propeller.h  rocket.h  system.h
user/dev/: CMakeLists.txt  catcher.c  catcher.h  motor.c  motor.h
user/device/: depth_sensor.c  depth_sensor.h  device.c  device.h  pwm_controller.c  pwm_controller.h
user/device/application/: depth_sensor.c  depth_sensor.h  motion_sensor.c  motion_sensor.h  pwm_controller.c  pwm_controller.h
user/device/interface/: jy901_interface.c  jy901_interface.h  ms5837_interface.c  ms5837_interface.h  pca9685_interface.c  pca9685_interface.h
user/rpc/: CMakeLists.txt  control.c  control.h  ctrl.c  info.h  rpc_fun.c  rpc_fun.h
user/server/: handler.c  handler.h  handler_function.c  handler_function.h  server.c  server.h
user/server/handler/: control.c  control.h  debug.c  debug.h  info.c  info.h
user/term/: pwm.c  pwm.h  terminal.c  terminal.h
utils/: CMakeLists.txt  gpio_gpioSysfs.c  gpio_gpiod.c  gpio_gpiod.h  gpio_sysfs.c  gpio_sysfs.h  iic.c  iic.h  other.c  other.h  other_utils.c  other_utils.h  pwm.c  pwm.h  spi.c  spi.h  uart.c  uart.h
utils/libmelon/: mln_types.h
